# ProjectFiniteElements

./: .gitignore  CMakeLists.txt  FEMDiNe.m  FEMDiNeP1.m  FEMDiNeQuadratura.m  FEMDiNeQuadratura2.m  FEMDiNeQuadraturaGenerale.m  FEMDiNeQuadraturaNotGood.m  FEMDiNeQuadraturaSparseMatrix.m  FEMDiNoHom.m  FEMParabolicEquations.asv  FEMParabolicEquations.m  P2.asv  P2.m  P3referencebasis.m  README.md  SUPG.m  Triangolator.m  calcoloNeP2nodi.m  calculateDerivate.m  calculateDerivateSUPG.m  calculateDerivateTemporal.m  eps_H1_P2.m.txt  eps_L2_P2.m.txt  errorFra.m  errorFunction.m  errorFunctionNew.m  errorFunctionOld.m  error_H1.m  error_L2.m  euleroImplicit.asv  euleroImplicit.m  funzione_specifica.m  integralQuadratura.m  main.m  mainEllitic.asv  mainEllitic.m  mainMassLumping.m  mainP1new.m  mainParabolic.m  (+9 more)
Adattività_griglia/: TriangolatorDD.m  mainadapt.m
EvolutionProblems/: ParabolicP1.m  ParabolicP1new.m  ParabolicP2.m  crankNicolson.m  crankNicolsonP2.m  euleroImplicit.m  implicitEuler.m  implicitEulerP2.m  mainCNEI.m  mainParabolic.m  parabolicCN.m  parabolicSpatialError.m  parabolicTimeError.m
Experiment/: ConfrontoP1P1Q.m  ConfrontoP1P2.m  ExperimentP1.m  ExperimentP2.m  P1DiNN.mat  P1DiNeQ.mat  P1DiNulle.mat  P2DiNN.mat  P2DiNulle.mat  parabolicP1CNIE.fig  risultatiOrdineP1.txt
Overlapping Methods/: mainOLM.m  reoderVector.m  untitled.m
P1/: FEMDiNe.m  FEMDiNeQuadratura.m  mainEllitic.m
P2script/: FEMDiNeP2.m  FEMDiNeP2DNW.asv  FEMDiNeP2DNW.m  FEMDiNeP2Fra.m  FEMDiNeP2tentativo.m  P2.m  checkOrderVertex.m  collectFunction.m  functionP2.m  mainP2.asv  (+4 more)
(+16 files in other folders)
